--- a/android/build.gradle
+++ b/android/build.gradle
@@ -47,7 +47,9 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.stripe:stripeterminal:2.20.0"
+    // implementation "com.stripe:stripeterminal:2.20.0"
+    implementation "com.stripe:stripeterminal-localmobile:2.20.0"
+    implementation "com.stripe:stripeterminal-core:2.20.0"
     implementation 'com.beust:klaxon:5.5'
     implementation 'com.google.code.gson:gson:2.9.0'
 }
